correccion Correccion del código en ts

--- a/carrito.html
+++ b/carrito.html
@@ -26,11 +26,13 @@
     <div class="contenedor-2">
       <h4>Su lista de Compras</h4>
       <ul id="lista"></ul>
-      <h4>El total de su compra es $</h4>
-      <span id="total"></span>
+      <h4>El total de su compra es $ <span id="total"></span></h4>
+      
+       <button id="btn-aplicar">Aplicar Descuento</button>
+          <p id="descuento"> </p>
     </div>
-    <button id="btn-aplicar">Aplicar Descuento</button>
-    <p class="descuento"></p>
+   
+   
 
     <script src="src/pagina2/index.ts"></script>
   </body>
